overlappig issue

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,6 @@ body {
     background: linear-gradient(45deg, teal, dodgerblue);
     color: #fff;
     min-height: 100vh;
-
 }
 
 p {
@@ -13,24 +12,28 @@ h2 {
     margin-bottom: 0;
 }
 
+
 .cont {
     border-radius: 4px;
-    /* background-color: #fff;
-    box-shadow: 0 0 4px 0 #000; */
-
     background: rgba(255, 255, 255, 0.30);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 2rem 4rem;
+    padding: 2rem 2rem;
+    /* Adjust padding for smaller screens */
     width: 70%;
     margin: 2rem auto 0;
+
 }
 
+#expenses {
 
+    position: relative;
+    z-index: 9999;
 
+}
 
 .expense {
     padding: 2rem 1rem;
@@ -38,7 +41,9 @@ h2 {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid rgb(255, 255, 255);
+
 }
+
 
 .expense_name {
     width: 60%;
@@ -46,7 +51,6 @@ h2 {
 
 .expense_name h2 {
     font-size: 2rem;
-
 }
 
 .expense_amount {
@@ -56,7 +60,6 @@ h2 {
 }
 
 .expense a {
-
     border: none;
     color: #fff;
     background-color: transparent;
@@ -64,4 +67,28 @@ h2 {
 
 .expense:last-child {
     border-bottom: none;
+}
+
+.dropdown {
+    position: absolute;
+    /* Ensure absolute positioning for z-index */
+    z-index: 3;
+    /* Set higher z-index for the dropdown */
+}
+
+/* Media queries for responsiveness */
+@media only screen and (max-width: 768px) {
+    .cont {
+        width: 80%;
+        padding: 2rem;
+        /* Adjust padding for smaller screens */
+    }
+
+    .dropdown {
+        position: static;
+        /* Set static positioning for smaller screens */
+        width: 100%;
+        /* Make the dropdown full width */
+        text-align: center;
+    }
 }
